tests/suite/snapshots/suite__check__tests__check__bad-bin-op2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-bin-op2.xi:2:15]
   │
 2 │     i:int[] = {1} - {}
   ·               ─┬─  
   ·                ╰─── Expected int but found int[]
───╯

